# langs

./: .gitignore  README.md
rust/50_prjs/compression_001/: Cargo.toml
rust/50_prjs/compression_001/src/: main.rs
rust/Practical_Rust_Projects/note/: Practical_rust_projects.md
rust/code/chap1/hello_world/: hello
rust/code/chap3/branch/: Cargo.toml
rust/code/chap3/var_mut/: Cargo.toml
rust/from_py_to_rust/: note.md
rust/from_py_to_rust/003_list_type/listish/: Cargo.toml
rust/from_py_to_rust/005_func_closure/python/: func_closure.py
rust/from_py_to_rust/018_argparse/: argp.py
rust/from_py_to_rust/01d_json/: from_str.py  person.py
rust/hands_on_rust/: hands_on_rust.md
rust/hands_on_rust/note/: chap1_get_start,md  chap5_building_dungeon_crawler.md
rust/note/: chap10_Generic_Types_Traits_and_Lifetimes.md  chap1_get_started.md  chap2_guessing_game.md  chap3_common_concepts.md  chap4_ownership.md  chap5_struct.md  chap6_enum_match.md  chap7_package_crates_and_modules.md  chap8_common_collection.md  chap9_error_handling.md  note_rust.md
rust/pipex/: Cargo.toml
rust/pipex/config/: config.yaml
rust/pipex/src/: main.rs
rust/pipex/src/config/: mod.rs
rust/pipex/src/core/: context.rs  engine.rs
rust/pipex/src/steps/: mod.rs  tf_convert.rs  traits.rs
rust/rust_book/code/: 0x01_env.ipynb  0x03_common_concepts.ipynb  0x04_ownership.ipynb  0x05_struct.ipynb  0x06_enums.ipynb  0x08_common_collections.ipynb  0x09_error_handling.ipynb
rust/rust_book/note/: 0x01_env.md
rust/rust_course/note/: 001_start.md  002_basic.md
(+66 files in other folders)
