[package]
name = "pipex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1" # 如果 Step 需要异步执行
tokio = { version = "1", features = ["full"] }
serde_json = "1.0" # 用于 Context 值的存储